<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dd_hding_container">
        <TextView
            android:id="@+id/dd_appt_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dd_hding_container"
        android:orientation="horizontal"
        android:id="@+id/dd_name_reg_container">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_name_container"
            android:orientation="horizontal"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_name"/>
            <EditText
                android:id="@+id/dd_doc_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_reg_container"
            android:orientation="horizontal"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_reg"/>
            <EditText
                android:id="@+id/dd_doc_reg"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dd_name_reg_container"
        android:orientation="horizontal"
        android:id="@+id/dd_deg_sp_container">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_deg_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_degree"/>
            <EditText
                android:id="@+id/dd_doc_deg"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_sp_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_specialization"/>
            <EditText
                android:id="@+id/dd_doc_sp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dd_deg_sp_container"
        android:orientation="horizontal"
        android:id="@+id/dd_age_gen_container">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_age_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_age"/>
            <EditText
                android:id="@+id/dd_age_reg"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_gender_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_gender"/>
            <EditText
                android:id="@+id/dd_gender_reg"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dd_age_gen_container"
        android:orientation="horizontal"
        android:id="@+id/dd_con_email_container">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_email_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_contact"/>
            <EditText
                android:id="@+id/dd_doc_email"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dd_contact_container"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/doc_email"/>
            <EditText
                android:id="@+id/dd_contact_email"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dd_cd_container"
        android:layout_below="@id/dd_con_email_container">
        <TextView
            android:id="@+id/dd_cd_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/chem_details"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/dd_cham_list_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dd_cd_container">
        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dd_cd_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noDoc_details_found"
            android:textStyle="italic"
            android:textColor="@color/colorGrey"
            android:textAlignment="center"
            android:visibility="gone"
            android:id="@+id/dd_chamDe_noDataMessage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dd_cd_container">
        <ListView
            android:id="@+id/dd_chember_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_anim"
            android:layout_marginTop="6dp">

        </ListView>
    </LinearLayout>

</RelativeLayout>
