<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bk_hding_container">
            <TextView
                android:id="@+id/bk_appt_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/bk_hding_container"
        android:id="@+id/doctor_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/doctor_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:singleLine="true"
            android:drawableEnd="@drawable/search"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doctor_search_container"
        android:id="@+id/visit_date_container"
        android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/visit_date_heading"/>
            <EditText
                android:id="@+id/visit_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/search_date"
                android:singleLine="true"
                android:focusable="false"
                android:drawableEnd="@drawable/calendar"
                />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/visit_date_container">
        <ListView
            android:id="@+id/doctor_chember_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_anim"
            android:layout_marginTop="6dp">

        </ListView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/book_appt_list_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/visit_date_container">
        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/visit_date_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noDoctor_found"
            android:textStyle="italic"
            android:textColor="@color/colorGrey"
            android:textAlignment="center"
            android:visibility="gone"
            android:id="@+id/book_appt_noDataMessage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
